@@ -1,22 +1,24 @@
 package com.nhnacademy.hexashoppingmallservice.service.book;
 
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
+
 import com.nhnacademy.hexashoppingmallservice.dto.book.PublisherRequestDTO;
 import com.nhnacademy.hexashoppingmallservice.entity.book.Publisher;
 import com.nhnacademy.hexashoppingmallservice.repository.book.PublisherRepository;
+import java.util.Collections;
+import java.util.List;
+import java.util.Optional;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
-
-import java.util.Arrays;
-import java.util.List;
-import java.util.Optional;
-
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
 
 class PublisherServiceTest {
 
@@ -46,12 +48,12 @@ class PublisherServiceTest {
 
     @Test
     void testGetAllPublisher() {
-        when(publisherRepository.findAll()).thenReturn(Arrays.asList(publisher));
+        when(publisherRepository.findAll()).thenReturn(Collections.singletonList(publisher));
 
         List<Publisher> publishers = publisherService.getAllPublisher();
 
         assertThat(publishers).hasSize(1);
-        assertThat(publishers.get(0).getPublisherName()).isEqualTo("Test Publisher");
+        assertThat(publishers.getFirst().getPublisherName()).isEqualTo("Test Publisher");
         verify(publisherRepository, times(1)).findAll();
     }
 
@@ -83,19 +85,18 @@ class PublisherServiceTest {
         verify(publisherRepository, times(1)).deleteById(1L);
     }
 
-//    @Test
-//    void testUpdatePublisher_Success() {
-//        PublisherRequestDTO requestDTO = new PublisherRequestDTO("Updated Publisher");
-//
-//        when(publisherRepository.findById(1L)).thenReturn(Optional.of(publisher));
-//        when(publisherRepository.save(any(Publisher.class))).thenReturn(Publisher.of("Updated Publisher"));
-//
-//        Publisher updatedPublisher = publisherService.updatePublisher(1L, requestDTO);
-//
-//        assertThat(updatedPublisher.getPublisherName()).isEqualTo("Updated Publisher");
-//        verify(publisherRepository, times(1)).findById(1L);
-//        verify(publisherRepository, times(1)).save(any(Publisher.class));
-//    }
+    @Test
+    void testUpdatePublisher_Success() {
+        PublisherRequestDTO requestDTO = new PublisherRequestDTO("Updated Publisher");
+
+        when(publisherRepository.findById(1L)).thenReturn(Optional.of(publisher));
+
+        Publisher updatedPublisher = publisherService.updatePublisher(1L, requestDTO);
+
+        assertThat(updatedPublisher.getPublisherName()).isEqualTo("Updated Publisher");
+        verify(publisherRepository, times(1)).findById(1L);
+
+    }
 
     @Test
     void testUpdatePublisher_NotFound() {
